# MPOINTERS2.0_CE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hola.txt
.github/workflows/: docker-publish.yml
server/: CMakeLists.txt
server/proto/: hello.proto
server/src/: client.cc  mem_mgr.cc  mem_mgr.h  server.cc  test_list.cpp
server/src/Defragmenter/: Defragmenter.h
server/src/dumps/: dumps.cc  dumps.h
server/src/garbage_collector/: garbage_collector.cc  garbage_collector.h
server/src/mpointer/: MPointer.h
server/src/parsing/: parsing.cc  parsing.h
server/src/services/: utils.h
server/src/services/create/: create_service.cc  create_service.h
server/src/services/decrease_ref/: decrease_ref_service.cc  decrease_ref_service.h
server/src/services/get/: get_service.cc  get_service.h
server/src/services/increase_ref/: increase_ref_service.cc  increase_ref_service.h
server/src/services/set/: set_service.cc  set_service.h
